--- a/colorpicker.css
+++ b/colorpicker.css
@@ -16,12 +16,18 @@ code {
 	display: inline-block;
 }
 canvas {
-	background: #eee;
-	border: solid 20px #ccc;
+	background: #ddd;
+	border: solid 20px #999;
 	cursor: pointer;
 	position: relative;
+	max-width: 100%;
+	max-height: 100%;
 }
 canvas.dragging {
+	border-color: #fff;
+	box-shadow: 0 0 70px #000;
+}
+.dark canvas.dragging {
 	border-color: #000;
 	box-shadow: 0 0 70px #fff;
 }
