--- a/colorpicker.css
+++ b/colorpicker.css
@@ -2,13 +2,21 @@
 .dark {
 	color: white;
 }
-html {
+html, body {
 	margin: 0;
 	padding: 0;
+	display: block;
+	min-height: 100%;
+	box-sizing: border-box;
 }
-body {
-	margin: 20px;
-	padding: 0;
+html {
+	border: dotted 20px #eee;
+	padding: 20px;
+}
+html.dragging {
+	border-color: pink;
+	border-style: solid;
+	box-shadow: 0 0 20px pink inset;
 }
 div,
 canvas,
@@ -17,19 +25,13 @@ code {
 }
 canvas {
 	background: #ddd;
-	border: solid 20px #999;
+	x-border: solid 20px #999;
 	cursor: pointer;
 	position: relative;
 	max-width: 100%;
 	max-height: 100%;
-}
-canvas.dragging {
-	border-color: #fff;
-	box-shadow: 0 0 70px #000;
-}
-.dark canvas.dragging {
-	border-color: #000;
-	box-shadow: 0 0 70px #fff;
+	box-shadow: 0 0 30px #888;
+	margin-bottom: 20px;
 }
 code {
 	min-width: 150px;
